--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+#point {
+    white-space: nowrap;
+    display:inline-block;
+    padding-left: 5px;
+}
+
 #coords {
     white-space: nowrap;
     display:inline-block;
